--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "foo",
-      "bar"
+      "packages/*"
     ]
   },
   "version": "0.0.0",
   "devDependencies": {
     "knip": "^2.25.2"
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
