--- a/packages/bar/package.json
+++ b/packages/bar/package.json
@@ -1,7 +1,7 @@
 {
     "name": "bar",
     "dependencies": {
-        "foo": "^0.1.0"
+        "foo": "workspace:^"
     },
     "version": "0.1.0"
 }
